# video_injection

./: CMakeLists.txt  README.md
1_Doc/: Subject.md
3_Implementations/: CMakeLists.txt
3_Implementations/include/: AnnotationFileReader.hpp  DataTypes.hpp  ItfAnnotationFileReader.hpp  TcpServer.hpp
3_Implementations/src/: DataReceiver.cpp  DataTransmetter.cpp  TcpClient.cpp  TcpServer.cpp
4_Samples/: CMakeLists.txt
4_Samples/Internship/: CMakeLists.txt
4_Samples/Internship/inc/: DataTypes.hpp
4_Samples/Internship/src/: prog1.cpp  prog2.cpp
5_External/Help/: CMakeLists.txt  Readme.md
5_External/Help/data/: annotation.txt  bb_annotation.txt
5_External/Help/src/: integrationApplication.cpp  testAnnotation.cpp
7_Tools/: utility.py
delivery/data/: bb_annotation.txt
delivery/include/: DataReceiver.hpp  DataTransmetter.hpp  TcpClient.hpp
